<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inicio"
            android:icon="@android:drawable/ic_menu_today"
            android:title="@string/menu_inicio" />

        <item
            android:id="@+id/nav_clientes"
            android:icon="@android:drawable/ic_menu_myplaces"
            android:title="@string/menu_clientes" />

        <item
            android:id="@+id/nav_proveedores"
            android:icon="@android:drawable/ic_menu_directions"
            android:title="@string/menu_proveedores" />

        <item
            android:id="@+id/nav_productos"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/menu_productos" />
    </group>

</menu>
